added input field translation

--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -52,6 +52,115 @@ Logger Settings=Logger Einstellungen
 Language Settings=Sprach Einstellungen
 
 [Translation]
+id=Input
+Concurrency=Nebenläufigkeit
+Search=Suche
+Hash (MB)=Hash (MB)
+Restart=Neustart
+Trace=Trace
+File format=Dateiformat
+Order=Reihenfolge
+First opening=Erste Eröffnung
+Random seed=Zufallssaat
+Switch policy=Wechselstrategie
+Event=Event
+Type=Typ
+Rounds=Runden
+Games per pairing=Partien pro Paarung
+Same opening=Gleiche Eröffnung
+No color swap=Kein Farbtausch
+Average Elo=Durchschnittliche Elo
+Hours=Stunden
+Minutes=Minuten
+Seconds=Sekunden
+Increment Minutes=Inkrement Minuten
+Increment Seconds=Inkrement Sekunden
+Increment Milliseconds=Inkrement Millisekunden
+Moves to Play=Züge zu spielen
+Predefined time control=Vordefinierte Zeitkontrolle
+Append mode=Anhänge-Modus
+Save only finished games=Nur beendete Partien speichern
+Minimal tags=Minimale Tags
+Include clock=Uhr einschließen
+Include eval=Bewertung einschließen
+Include PV=PV einschließen
+Include depth=Tiefe einschließen
+Active=Aktiv
+Min full moves=Min. Vollzüge
+Required consecutive moves=Erforderliche aufeinanderfolgende Züge
+Centipawn threshold=Centipawn-Schwelle
+Both side decides=Beide Seiten entscheiden
+Elo Lower (H0)=Elo Untergrenze (H0)
+Elo Upper (H1)=Elo Obergrenze (H1)
+Alpha (‰)=Alpha (‰)
+Beta (‰)=Beta (‰)
+Max Games=Max. Partien
+Number of Games=Anzahl Partien
+Note Duration=Hinweis-Dauer
+Success Duration=Erfolgs-Dauer
+Warning Duration=Warnungs-Dauer
+Error Duration=Fehler-Dauer
+Report Log - Base Name=Report Log - Basisname
+Engine Log - Base Name=Engine Log - Basisname
+Engine Log File Strategy=Engine Log Dateistrategie
+Language=Sprache
+
+[Translation]
+id=Option
+Yes=Ja
+Inactive=Inaktiv
+Test=Test
+Active=Aktiv
+
+[Translation]
+id=Section
+Available Engines=Verfügbare Engines
+Selected Engines=Ausgewählte Engines
+Global Engine Settings=Globale Engine Einstellungen
+Engines=Engines
+Opening=Eröffnung
+Tournament=Turnier
+Time Control=Zeitkontrolle
+Pgn=Pgn
+Adjudicate draw=Remis bewerten
+Adjudicate resign=Aufgabe bewerten
+SPRT Configuration=SPRT Konfiguration
+Configuration=Konfiguration
+Tests=Tests
+Snackbar Settings=Snackbar Einstellungen
+Tutorial Progress=Tutorial Fortschritt
+Logger Settings=Logger Einstellungen
+Language Settings=Sprach Einstellungen
+
+[Translation]
+id=Table
+Depth=Tiefe
+Time=Zeit
+Eval=Bewertung
+PV=PV
+Move=Zug
+Nodes=Knoten
+NPS=NPS
+Tb hits=TB
+Value=Wert
+Primary variant=Hauptvariante
+Name=Name
+Elo=Elo
+Error=Fehler
+Score=Punkte
+Total=Gesamt
+WDL=WDL
+Count=Anzahl
+Cause=Ursache
+White=Weiß
+Black=Schwarz
+Result=Ergebnis
+Best move=Bester Zug
+Engine=Engine
+Status=Status
+Test=Test
+
+[Translation]
 id=Tab
 Engines=Engines
 Tournament=Turnier
