--- a/i18n/fra.lang
+++ b/i18n/fra.lang
@@ -52,6 +52,115 @@ Logger Settings=Paramètres du journal
 Language Settings=Paramètres de langue
 
 [Translation]
+id=Input
+Concurrency=Simultanéité
+Search=Recherche
+Hash (MB)=Hash (MB)
+Restart=Relancer
+Trace=Trace
+File format=Format de fichier
+Order=Ordre
+First opening=Première ouverture
+Random seed=Graine aléatoire
+Switch policy=Politique de changement
+Event=Événement
+Type=Type
+Rounds=Rondes
+Games per pairing=Parties par paire
+Same opening=Même ouverture
+No color swap=Pas d'échange de couleur
+Average Elo=Elo moyen
+Hours=Heures
+Minutes=Minutes
+Seconds=Secondes
+Increment Minutes=Incrément Minutes
+Increment Seconds=Incrément Secondes
+Increment Milliseconds=Incrément Millisecondes
+Moves to Play=Coups à jouer
+Predefined time control=Contrôle du temps prédéfini
+Append mode=Mode ajout
+Save only finished games=Sauvegarder uniquement les parties terminées
+Minimal tags=Tags minimaux
+Include clock=Inclure l'horloge
+Include eval=Inclure l'évaluation
+Include PV=Inclure PV
+Include depth=Inclure la profondeur
+Active=Actif
+Min full moves=Coups complets min
+Required consecutive moves=Coups consécutifs requis
+Centipawn threshold=Seuil centipawn
+Both side decides=Les deux côtés décident
+Elo Lower (H0)=Elo Inférieur (H0)
+Elo Upper (H1)=Elo Supérieur (H1)
+Alpha (‰)=Alpha (‰)
+Beta (‰)=Beta (‰)
+Max Games=Parties max
+Number of Games=Nombre de parties
+Note Duration=Durée de note
+Success Duration=Durée de succès
+Warning Duration=Durée d'avertissement
+Error Duration=Durée d'erreur
+Report Log - Base Name=Journal de rapport - Nom de base
+Engine Log - Base Name=Journal moteur - Nom de base
+Engine Log File Strategy=Stratégie fichier journal moteur
+Language=Langue
+
+[Translation]
+id=Option
+Yes=Oui
+Inactive=Inactif
+Test=Test
+Active=Actif
+
+[Translation]
+id=Section
+Available Engines=Moteurs disponibles
+Selected Engines=Moteurs sélectionnés
+Global Engine Settings=Paramètres globaux du moteur
+Engines=Moteurs
+Opening=Ouverture
+Tournament=Tournoi
+Time Control=Contrôle du temps
+Pgn=Pgn
+Adjudicate draw=Adjuger nulle
+Adjudicate resign=Adjuger abandon
+SPRT Configuration=Configuration SPRT
+Configuration=Configuration
+Tests=Tests
+Snackbar Settings=Paramètres Snackbar
+Tutorial Progress=Progrès du tutoriel
+Logger Settings=Paramètres du journal
+Language Settings=Paramètres de langue
+
+[Translation]
+id=Table
+Depth=Profondeur
+Time=Temps
+Eval=Évaluation
+PV=PV
+Move=Coup
+Nodes=Nœuds
+NPS=NPS
+Tb hits=TB
+Value=Valeur
+Primary variant=Variante principale
+Name=Nom
+Elo=Elo
+Error=Erreur
+Score=Score
+Total=Total
+WDL=WDL
+Count=Nombre
+Cause=Cause
+White=Blanc
+Black=Noir
+Result=Résultat
+Best move=Meilleur coup
+Engine=Moteur
+Status=Statut
+Test=Test
+
+[Translation]
 id=Tab
 Engines=Moteurs
 Tournament=Tournoi
