clang tidy correction in imgui-table

--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -53,7 +53,7 @@ Language Settings=Sprach Einstellungen
 
 [Translation]
 id=Input
-Concurrency=Nebenläufigkeit
+Concurrency=Parallelität
 Search=Suche
 Hash (MB)=Hash (MB)
 Restart=Neustart
