--- a/i18n/eng.lang
+++ b/i18n/eng.lang
@@ -60,6 +60,8 @@ Less Options=Less Options
 New SPRT tournament=New SPRT tournament
 Save SPRT tournament=Save SPRT tournament
 Load SPRT tournament=Load SPRT tournament
+EPD Analysis=EPD Analysis
+Yes, stop analysis=Yes, stop analysis
 
 [Translation]
 id=Checkbox
@@ -76,6 +78,7 @@ Ponder Test=Ponder Test
 EPD Test=EPD Test
 Multiple Games Test=Multiple Games Test
 Start/Stop Test=Start/Stop Test
+Score from White POV=Score from White POV
 
 [Translation]
 id=Input
@@ -117,6 +120,12 @@ Beta (‰)=Beta (‰)
 Hours=Hours
 Increment Minutes=Increment Minutes
 Moves to Play=Moves to Play
+Name=Name
+Hash=Hash
+ponder=ponder
+MultiPV=MultiPV
+UCI_EngineAbout=UCI_EngineAbout
+qaplaBitbaseCache=qaplaBitbaseCache
 
 [Translation]
 id=Option
@@ -303,6 +312,7 @@ Third engine added!\nTournament will include new pairings.\n\nClick 'Continue' t
 Extended tournament is running!\n\nLet it finish or click 'Stop' to pause.=Extended tournament is running!\n\nLet it finish or click 'Stop' to pause.
 Tournament Tutorial Complete!\n\nYou've mastered tournament basics!\n\n• Configure engines and settings\n• Run tournaments with concurrency\n• Save and extend tournaments=Tournament Tutorial Complete!\n\nYou've mastered tournament basics!\n\n• Configure engines and settings\n• Run tournaments with concurrency\n• Save and extend tournaments
 Tournament stopped=Tournament stopped
+Analysis stopped=Analysis stopped
 
 [Translation]
 id=Table
@@ -472,6 +482,8 @@ Maximum number of games before test terminates inconclusively.\nIf neither H0 no
 Type II error rate (false negative): probability of accepting H0 when H1 is true.\nLower values mean more confidence but require more games.=Type II error rate (false negative): probability of accepting H0 when H1 is true.\nLower values mean more confidence but require more games.
 Quick selection for common time controls.\nSelecting an option automatically fills the input fields above.\nExample: '20.0+0.02' sets Seconds=20, Increment Ms==Quick selection for common time controls.\nSelecting an option automatically fills the input fields above.\nExample: '20.0+0.02' sets Seconds=20, Increment Ms=
 Number of games per pairing.\nTotal games=games × rounds=Number of games per pairing.\nTotal games = games × rounds
+Continue EPD position analysis=Continue EPD position analysis
+Stop EPD analysis immediately=Stop EPD analysis immediately
 
 [Translation]
 id=Tab
@@ -493,6 +505,7 @@ SPRT Tournament=SPRT Tournament
 Tutorial=Tutorial
 Choose Language=Choose Language
 Messages=Messages
+EPD Analysis=EPD Analysis
 
 [Translation]
 id=Text
@@ -516,4 +529,8 @@ Starting a new SPRT tournament will delete the existing one.\nSave the current S
 Nothing to clear.=Nothing to clear.
 Configure the SPRT (Sequential Probability Ratio Test) parameters. These settings define when the test concludes that the engine under test is stronger, weaker, or inconclusive compared to the reference engine.=Configure the SPRT (Sequential Probability Ratio Test) parameters. These settings define when the test concludes that the engine under test is stronger, weaker, or inconclusive compared to the reference engine.
 Successfully parsed opening file using PGN parser.\nFound 1000 opening position(s).=Successfully parsed opening file using PGN parser.\nFound 1000 opening position(s).
+Select engines for the EPD analysis:=Select engines for the EPD analysis:
+An EPD analysis is currently running. Would you like to stop it?=An EPD analysis is currently running. Would you like to stop it?
+EPD analysis stopped.=EPD analysis stopped.
+Analysis stopped=Analysis stopped
 
